--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.0.2
-Flask-SQLAlchemy==2.5.1
+Flask-SQLAlchemy==3.1.1 
+SQLAlchemy==2.0.30      
 Flask-WTF==0.15.1
 WTForms==2.3.3
 Werkzeug==2.0.2
-requests==2.31.0
 gunicorn==20.1.0
+requests==2.31.0
